# qwen-asr-poc

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
doc/: TDR_qwen-asr-backgroud_knowledge.md  TDR_qwen-asr-python.md  plan.md  requirements.md  start.md
src/qwen3_asr/: cli.py  exceptions.py  transcriber.py
tests/: conftest.py  test_cli.py  test_transcriber.py
